--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -47,9 +47,11 @@
 }
 
 .headerContainer button:hover {
-  background-color: #07090a;
+  background-color: red;
+  border:white;
+  color: black;
   cursor: pointer;
-  transition: 0.3s ease-in;
+  transition: 3s ease-in;
 }
 
 @media only screen and (max-width: 650px) {
